# NCAT-WD-Accuracy-and-Fairness

./: .dockerignore  .gitignore  Dockerfile  README.md  azure-pipelines.yml  docker-compose.yml  requirements.txt  validate_distill.py
.github/workflows/: ci.yml
NCAT-WD-Accuracy-and-Fairness/: Makefile  README.md  environment.yml  pyproject.toml
NCAT-WD-Accuracy-and-Fairness/NCATWDAFMod/: __init__.py  dataset.py  features.py  plots.py
NCAT-WD-Accuracy-and-Fairness/NCATWDAFMod/modeling/: predict.py  train.py
NCAT-WD-Accuracy-and-Fairness/docs/: mkdocs.yml
NCAT-WD-Accuracy-and-Fairness/docs/docs/: index.md
models/yolov8/: config.yaml  data.yaml  infer.py  train.py
scripts/: download_weights.py  infer_and_label.py
src/: data_prep.py
tests/: test_environment.py
