[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "NCATWDAF"
version = "0.0.1"
description = "A research project where we dive into what environmental or algorithmic context impact the accuracy of weapon detection \u0026 what can be done to resolve it."
authors = [
  { name = "Noire Meyers" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.13.5"


[tool.ruff]
line-length = 99
src = ["NCATWDAF"]
include = ["pyproject.toml", "NCATWDAF/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["NCATWDAF"]
force-sort-within-sections = true

